grafana-test/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: my-reverse-proxy
  name: my-nginx-svc
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: my-reverse-proxy
  name: my-nginx
  labels:
    linkerd.io/inject: enabled
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: novasdream/hello-nginx:1.1.5
        ports:
        - containerPort: 80
