grafana-test/ingress-play.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  # defaultBackend:
  #   service:
  #     name: kubernetes-dashboard
  #     port:
  #       number: 80
          
  rules:
   - host: web.linkerd-viz.svc.cluster.local
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 8443
