grafana-test/service-account.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  namespace: linkerd-viz
  name: grafana
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: prometheus-admin
  requiredAuthenticationRefs:
    - kind: ServiceAccount
      name: grafana
      namespace: grafana

# http://web.linkerd-viz.svc.cluster.local/tap?autostart=true&namespace=grafana&resource=pod/grafana-8c9fb74bd-9plvt&toNamespace=linkerd-viz&toResource=pod/prometheus-867786c579-s9swc&path=/api/v1/label/__name__/values
# Request Init

# Authority
# prometheus.linkerd-viz.svc.cluster.local:9090

# Path
# /api/v1/label/__name__/values
